// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`command git with git "msg" hook it should work with hooks: child-process 1`] = `
Object {
  "args": Array [
    "run",
    "precarna:git",
  ],
  "command": "npm",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "msg" hook it should work with hooks: child-process 2`] = `
Object {
  "args": Array [
    "--color",
    "--edit",
    "path/to/commit.message",
    "--config",
    "/path/to/project/node_modules/carna/configs/commitlintrc.json",
  ],
  "command": "/path/to/project/node_modules/.bin/commitlint",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "msg" hook it should work with hooks: child-process 3`] = `
Object {
  "args": Array [
    "run",
    "postcarna:git",
  ],
  "command": "npm",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with git "msg" hook it should work: child-process 1`] = `
Object {
  "args": Array [
    "--color",
    "--edit",
    "path/to/commit.message",
    "--config",
    "/path/to/project/node_modules/carna/configs/commitlintrc.json",
  ],
  "command": "/path/to/project/node_modules/.bin/commitlint",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;
